--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 200px auto 200px;
+  max-width: 900px;
+  margin: 0 auto;
+  min-height: 80vh;
+  padding: 25px;
+  border-radius: 8px;
+}
+#tasks {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+  h1 {
+    text-align: left;
+  }
